<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/act1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/act1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/act2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/act2"
        app:layout_constraintStart_toStartOf="@+id/act1"
        app:layout_constraintTop_toBottomOf="@+id/act1" />

    <Button
        android:id="@+id/act3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/act3"
        app:layout_constraintStart_toStartOf="@+id/act2"
        app:layout_constraintTop_toBottomOf="@+id/act2" />

    <Button
        android:id="@+id/act4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/act4"
        app:layout_constraintStart_toStartOf="@+id/act3"
        app:layout_constraintTop_toBottomOf="@+id/act3" />

    <Button
        android:id="@+id/salir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salir"
        app:layout_constraintStart_toStartOf="@+id/act4"
        app:layout_constraintTop_toBottomOf="@+id/act4" />


</androidx.constraintlayout.widget.ConstraintLayout>